add JVM Params notes